--- a/apps/nzbhydra.yml
+++ b/apps/nzbhydra.yml
@@ -15,7 +15,7 @@
         pgrole: 'nzbhydra'
         intport: '5076'
         extport: '5076'
-        image: ' hotio/nzbhydra2:latest'
+        image: ' hotio/nzbhydra2'
 
     # CORE (MANDATORY) ############################################################
     - name: 'Including cron job'
