--- a/apps/lidarr.yml
+++ b/apps/lidarr.yml
@@ -50,6 +50,7 @@
         pg_env:
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
 
     # MAIN DEPLOYMENT #############################################################
     - name: 'Deploying {{pgrole}}'
