--- a/apps/nzbhydra.yml
+++ b/apps/nzbhydra.yml
@@ -51,6 +51,7 @@
         pg_env:
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
 
     # MAIN DEPLOYMENT #############################################################
     - name: 'Deploying {{pgrole}}'
