--- a/apps/pgui.yml
+++ b/apps/pgui.yml
@@ -57,6 +57,7 @@
         pg_env:
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
 
     # first catchup data ##########################################################
 
