--- a/apps/netdata.yml
+++ b/apps/netdata.yml
@@ -51,6 +51,7 @@
         pg_env:
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
           DOCKER_USR: 'root'
 
     # MAIN DEPLOYMENT #############################################################
