--- a/apps/ombi.yml
+++ b/apps/ombi.yml
@@ -67,6 +67,7 @@
         pg_env:
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
 
     # MAIN DEPLOYMENT #############################################################
 
