--- a/apps/plex.yml
+++ b/apps/plex.yml
@@ -4,7 +4,7 @@
 # Author(s):  Admin9705
 # Moded:      MrDoob for ptS-Comm
 # URL:        https://pgblitz.com - http://github.pgblitz.com
-# GNU:        General Public License v3.0
+# GNU:        General Public License v3.0TZ: 'America/Los_Angeles'
 ################################################################################
 ---
 - hosts: localhost
@@ -80,6 +80,7 @@
           #  linuxserver.io enable linuxserver.io compatability. #
           PUID: '1000'
           PGID: '1000'
+          TZ: 'America/Los_Angeles'
           DOCKER_MODS: 'justinglock40/lsioplexmod:latest'
 
     - name: Check {{pgrole}}-preferences.xml exists
